# Staisp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  clang-tidy.sh  compiler.cpp  frontend.cpp
code/: constexpr_arr.sta  gcd.sta
code/error_convertor/: 1.sta  10.sta  10_2.sta  11.sta  11_2.sta  11_3.sta  19.sta  23.sta  24.sta  25.sta  26.sta  4.sta  5.sta
code/error_executor/: 8.sta
code/error_lexer/: 1.sta
code/error_parser/: 1.sta  10.sta  11.sta  12.sta  13.sta  14.sta  2.sta  3.sta  4.sta  5.sta  6.sta  7.sta  8.sta  9.sta
code/minimal_code/: 10.sta  13.sta  15.sta  16.sta  17.sta  18.sta  2.sta  3.sta  4.sta  5.sta  6.sta  7.sta  8.sta  9.sta
code/opts/cp/: 1.sta
frontend/: CMakeLists.txt  ast.hpp  gen.sh  lexer.cpp  lexer.l  main.cpp  parser.y  y.tab.cpp  y.tab.hpp
include/: alys_dom.h  alys_loop.h  asm_instr.h  asm_regs.h  ast_exec.h  ast_node.h  bkd_block.h  bkd_branchinstrtype.h  bkd_fcmpinstrtype.h  bkd_freg.h  bkd_fregfreginstrtype.h  bkd_fregimmreginstrtype.h  bkd_freginstrtype.h  bkd_fregreginstrtype.h  bkd_func.h  bkd_global.h  bkd_imminstrtype.h  bkd_instr.h  bkd_ir_instr.h  bkd_jumpinstrtype.h  bkd_mainstrtype.h  bkd_module.h  bkd_reg.h  bkd_reg_alloc.h  bkd_regfreginstrtype.h  bkd_regimminstrtype.h  bkd_regimmreginstrtype.h  bkd_reginstrtype.h  bkd_reglabelinstrtype.h  bkd_regreginstrtype.h  common_node.h  common_token.h  convert_ast_to_ir.h  convert_ir_to_asm.h  convert_ir_to_bkd.h  def.h  env.h  imm.h  ir_block.h  ir_call_instr.h  (+35 more)
lib/: sylib.c  sylib.h  sylib.ll
minimal_code/: 1.sta  10.sta  12.sta  2.sta  3.sta  4.sta  5.sta  6.sta  7.sta  8.sta  9.sta
runtime/: libstaisp.c  makefile
src/: alys_dom.cc  alys_loop.cc  asm_instr.cpp  asm_instr.h  asm_regs.cpp  asm_regs.h  ast_exec.cpp  ast_exec.h  ast_node.cpp  ast_node.h  bkd_block.cpp  bkd_func.cpp  bkd_global.cpp  bkd_ir_instr.cpp  bkd_module.cpp  bkd_peephole.cpp  bkd_reg_alloc.cpp  chunk.cpp  chunk.h  common_node.cpp  common_node.h  common_token.cpp  common_token.h  compile.h  compiler.cpp  convert_ast_to_ir.cpp  convert_ast_to_ir.h  convert_ir_to_asm.cpp  convert_ir_to_bkd.cpp  def.cpp  def.h  env.h  evaluate.cpp  evaluate.h  imm.cpp  imm.h  instruction.cpp  instruction.h  ir_block.cpp  ir_block.h  (+62 more)
staisp_code/: arr.sta  arr2.sta  brk_ctn.sta  const_fib.sta  constexpr.sta  diff_type_calc.sta  env.sta  fib.sta  gcd.sta  gcd_noblock.sta  ptr.sta
test/: CMakeLists.txt  arr.sta  arr3.sta  const_func.sta  gcd_noblock.sta  ptr.sta  stopwatch.hpp  test.cpp  test_2024.cpp  test_backend.cpp  test_frontend.cpp  test_lib.hpp  test_sysy.cpp  test_sysy_backend.cpp  test_sysy_frontend.cpp
test/error_convertor/: 9.sta
test/error_parser/: 10.sta  2.sta  6.sta  7.sta  8.sta  9.sta
test/src/: read_file.cpp  read_file.h  test_bkd.cpp  test_block_related.cpp  test_code.cpp  test_common.cpp  test_common_token.cpp  test_convertor.cpp  test_env.cpp  test_executor.cpp  test_framework.h  test_imm.cpp  test_instr.cpp  test_minimal_code.cpp  test_staisp_lexer.cpp  test_staisp_parser.cpp  test_sysy.cpp  test_test.cpp  test_type.cpp
(+93 files in other folders)
